Image changes for site

--- a/Python_Django/MyPortfolio/jobs/templates/SamplePortfolio.html
+++ b/Python_Django/MyPortfolio/jobs/templates/SamplePortfolio.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <section id="about">
             <h2>About Me</h2>
-            <img src = "{% static 'about_me.jpeg' %}" alt="Your image" class="profile-pic">
+            <img src = "{% static 'images/about_me.jpeg' %}" alt="Your image" class="profile-pic">
             <!--img src="about_me.jpeg" alt="Your Image" class="profile-pic"-->
             <p>
                 <!-- Add your bio here -->
