changes to portfolio
removing oversized images

--- a/Python_Django/MyPortfolio/jobs/templates/SamplePortfolio.html
+++ b/Python_Django/MyPortfolio/jobs/templates/SamplePortfolio.html
@@ -28,7 +28,6 @@
             <p>
                 <!-- Add your bio here -->
                 A passionate QA Engineer with a strong focus on ensuring high-quality software.
-                Experienced in [mention testing methodologies, tools, etc.].
             </p>
         </section>
 
@@ -36,10 +35,11 @@
             <h2>Skills</h2>
             <ul>
                 <li>Manual Testing</li>
-                <li>Automated Testing (e.g., Selenium, JUnit)</li>
-                <li>Test Case Management (e.g., Jira, TestRail)</li>
-                <li>Bug Tracking</li>
-                <li>[Add more skills]</li>
+                <li>Automated Testing : TCLscript, Python, Playwright, RPA</li>
+                <li>Test Case Management: JIRA, Octane, TestRail</li>
+                <li>Bug Tracking: JIRA</li>
+                <li>Knowledge: VoIP: SIP, SDP, RTP, TCP/IP, DHCP, TFTP, SNMP, FTP</li>
+                <li>Tools: Splunk, SPL, MySQL, DBSQL lite, AWS, Docker, Django, Notion, Power Automate, Robot Framework </li>
             </ul>
         </section>
 
